--- a/11june/basic.html
+++ b/11june/basic.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-IN">
     <head>
         <title>learning</title>
     </head>
@@ -18,7 +18,8 @@
 <img src="https://images.g2crowd.com/uploads/product/image/social_landscape/social_landscape_4c21c11231eb243644374e00ec085753/zopdev.png" width="350px" height="250px" alt="zop.dev">
 <!-- the above src is absolute url -->
 
-<p style="color: red;"> checking styles</p>
+<p style="color: red;" title="it is red"> checking styles</p>
+<!-- hover over the p to see the title -->
 
 
     </body>
