--- a/11june/basic.html
+++ b/11june/basic.html
@@ -2,9 +2,21 @@
 <html lang="en-IN">
     <head>
         <title>learning</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
 
+
     <body>
+
+        <nav aria-label="Main Navigation">
+            <ul>
+                <li><a>Home</a></li>
+                <li><a>About</a></li>
+                <li><a>Services</a></li>
+            </ul>
+
+        </nav>
+        <h1>blue</h1>
        <div>
         hello
        </div> <hr>
@@ -20,6 +32,16 @@
 
 <p style="color: red;" title="it is red"> checking styles</p>
 <!-- hover over the p to see the title -->
+
+
+<div style=" border:2px; color: black; width: 300px; height:300px; border-color: black; background-color: aqua; box-sizing: border-box; display: flex; justify-content: center; align-items: center;   " > 
+    <div style="border: 2px; color:black; border-color: black;  background-color: beige; width: 150px; height: 150px; text-align: center;">
+        content
+    </div>
+</div>
+
+
+
 
 
     </body>
